section about Jura done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,33 @@
-% template
-@online{tag,
-	author = "Name",
-	title = "Title",
-	url = "url",
-	urldate = {YYYY-MM-DD}
+@online{topo-jura,
+	title = "Portal Górski, Topo: Jura Krakowsko-Częstochowska",
+	url = "http://topo.portalgorski.pl/Jura-Krakowsko-Cz%C4%99stochowska,obszar,34",
+	urldate = {2020-06-19}
+}
+@online{jura-okiennik,
+	author = "Paweł Wrona",
+	title = "Jurajskie abecadło: O jak Okiennik Wielki",
+	url = "https://8a.pl/8academy/jurajskie-abecadlo-o-okiennik-wielki/",
+	urldate = {2020-06-19}
+}
+@online{jura-rzedkowice,
+	author = "Paweł Wrona",
+	title = "Jurajskie abecadło: R jak Rzędkowice",
+	url = "https://8a.pl/8academy/jurajskie-abecadlo-r-jak-rzedkowice/",
+	urldate = {2020-06-19}
+}
+@online{jura-gora-zborow,
+	author = "Paweł Wrona",
+	title = "Jurajskie abecadło: G jak Góra Zborów",
+	url = "https://8a.pl/8academy/jurajskie-abecadlo-g-gora-zborow/",
+	urldate = {2020-06-19}
+}
+@online{jura-intro,
+	title = "Wspinanie w skałach Jury Krakowsko-Częstochowskiej",
+	url = "https://cdn11.podroze.smcloud.net/t/image/134917/wspinanie_w_skalach_jury_krakowsko.jpg",
+	urldate = {2020-06-19}
+}
+@online{topo-gora-zborow,
+	title = "Portal Górski, Topo: Góra Zborów",
+	url = "http://topo.portalgorski.pl/G%C3%B3ra-Zbor%C3%B3w,Podlesice,Jura-Krakowsko-Cz%C4%99stochowska,sektor,384",
+	urldate = {2020-06-21}
 }
