intro to grades Kurtyka's grading system added git commends to Makefile

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -31,3 +31,26 @@
 	url = "http://topo.portalgorski.pl/G%C3%B3ra-Zbor%C3%B3w,Podlesice,Jura-Krakowsko-Cz%C4%99stochowska,sektor,384",
 	urldate = {2020-06-21}
 }
+@online{alex-lowe,
+	title = "Cytat Alexa Lowe na stronie szkoły wspinania OnSajt",
+	url = "https://kurs-skalkowy.pl/",
+	urldate = {2020-06-21}
+}
+@online{tyg-powszechni-kurtyka,
+	author = "Bartek Dobroch",
+	title = "Tygodnik Powszechny: Skala Kurtyki",
+	url = "https://www.tygodnikpowszechny.pl/skala-kurtyki-151930",
+	urldate = {2020-06-21}
+}
+@online{drytooling-skale,
+	author = "Damian Granowski",
+	title = "Skale wspinaczkowe - letnie, zimowe, alpejskie, mikstowe, lodowe",
+	url = "https://drytooling.com.pl/serwis/art/artykuly/2177-skale-wspinaczkowe-zimowe-lodowe-alpejskie-letnie",
+	urldate = {2020-06-21}
+}
+@online{VI8,
+	author = "Piotr Czmoch",
+	title = "Czy są granice wspinaczkowe w polskich skałach?",
+	url = "https://8a.pl/8academy/czy-sa-granice-wspinaczkowe-w-polskich-skalach/",
+	urldate = {2020-06-21}
+}
