--- a/sportowa_mlynarczykm.tex
+++ b/sportowa_mlynarczykm.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{polski}
 \usepackage[utf8]{inputenc}
+\usepackage{dirtytalk}
 \usepackage{lettrine}
 \usepackage{xcolor}
 \usepackage[nodayofweek]{datetime}
@@ -48,16 +49,25 @@
 %\lettrine[lines=2]{}{}
 
 \section{Stosowane skale wyceny trudności tras sportowych w Polsce}
-\lettrine[lines=2]{O}{} piszę w tej pracy dwie najpopularniejsze skale wyceny wspinaczkowych tras sportowych w Polsce - skalę Kurtyki, najczęściej spotykaną w skałach i na niektórych ścianach sztucznych, oraz skalę francuską, która ze względu na większą rozpoznawalność na świecie, spotykana jest na obiektach krytych.
+\lettrine[lines=2]{W}{} kulturze wspinaczkowej problem wyceny tras wydaje się być sprawą dość kontrowersyjną. W końcu, jak miał rzekomo powiedzieć Alex Lowe: \say{Najlepszym wspinaczem jest ten, kto czerpie z tego najwięcej radości} \cite{alex-lowe}. Niemniej jednak, jak w każdym sporcie i w ludzkiej naturze ogólnie, potrzeba wymierności rezultatów, czy też kategoryzacji i porównania z innymi, lub też samym sobą na przestrzeni czasu, wydaje się wygrywać. Poza tym, dopóki \say{cyfra} nie przysłania nam owej radości płynącej ze wspinania, może ona okazać się bardzo pomocna w wyborze potencjalnych projektów, czy też rywalizacji sportowej. 
+
+Istnieje spora ilość skal wyceny tras we wspinaczce. Owa dywersyfikacja częściowo wydaje się być spowodowana istnieniem wielu odmian wspinaczki, ale również krajami w jakich owe skale są stosowane. Kraj ma bowiem wpływ na rodzaj skał i na lokalne warunki wspinaczkowe - czynniki, które są częściowo odpowiedzialne za trudność jednoznacznego porównania różnych skal wspinaczkowych, o którym trochę więcej w sekcji \ref{porownanie}. Stąd też, skale wspinaczkowe mają z reguły charakter lokalny, a ich zadaniem wydaje się być umożliwienie wspinaczom danego rejonu na dobór tras na podstawie swoich poprzednich przejść. Warto tutaj nadmienić, że próby standaryzacji i globalizacji skal wspinaczkowych jak najbardziej istnieją. Opiszę w tej pracy dwie najpopularniejsze skale wyceny wspinaczkowych tras sportowych w Polsce - skalę Kurtyki spotykaną m.in. w skałach Jury Krakowsko-Częstochowskiej, oraz skalę saksońską, którą możemy spotkać w Górach Stołowych.
 
 \subsection{Skala Kurtyki}
+Wojtek Kurtyka (rysunek \ref{kurtyka}) jest jednym z najwybitniejszych wspinaczy polskich w historii. Jednym z jego dokonań było zaproponowanie w 1981 roku skali, która później przyjęła się przybierając za nazwę Jego nazwisko. Aby wytłumaczyć jej obecną postać, należy cofnąć się do czasów jej powstania i po krótce przedstawić skalę \textit{UIAA}. Skala Kurtyki miała być eleganckim rozszerzeniem skali \textit{UIAA}. Jest to skala otwarta, tzn. bez górnego ograniczenia wyceny trudności i do wyceny VI+ jest tożsama ze skalą proponowaną przez \textit{UIAA}. Kolejne poziomy trudności tworzone są poprzez dodanie kropki i cyfry arabskiej, następujących po rzymskim \textit{VI}. W skali dopuszcza się istnienie plusów (minusów brak), oraz stopni łamanych, np. VI.3+/VI.4 \cite{drytooling-skale}. Obecnie, najwyższą wyceną w skali Kurtyki jest VI.8. Pierwszą trasą o tej wycenie było \textit{Pandemonum} na Gołębniku - trasę tę poprowadził Rafał Moucki w 2001 roku \cite{VI8}.
 
-\subsection{Skala francuska}
+\begin{figure}[!htbp]
+	\begin{center}
+		\includegraphics[width=0.9\linewidth]{images/kurtyka.eps}
+	\end{center}
+	\caption{Wojciech Kurtyka w Tatrach Zachodnich, droga Łamaniec na Raptawickiej Turni, lata 90. XX w. (fot. ze zbiorów Wojciecha Kurtyki) \cite{tyg-powszechni-kurtyka}}
+	\label{kurtyka}
+\end{figure}
 
 \subsection{Skala saksońska}
 
 \subsection{Próba porównania skal}
-
+\label{porownanie}
 
 \section{Popularne rejony skałkowe w Polsce}
 \lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Sokoliki i Góry Stołowe.
