addition to Kurtyka's grading system section - forgot UIAA grading system hasn't been introduced

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -54,3 +54,19 @@
 	url = "https://8a.pl/8academy/czy-sa-granice-wspinaczkowe-w-polskich-skalach/",
 	urldate = {2020-06-21}
 }
+@online{wiki-skale,
+	title = "Wikipedia: Skala trudności dróg skalnych",
+	url = "https://pl.wikipedia.org/wiki/Skala_trudno%C5%9Bci_dr%C3%B3g_skalnych",
+	urldate = {2020-06-21}
+}
+@online{skalnik-skale,
+	author = "Eiger Team",
+	title = "Skale wspinaczkowe",
+	url = "https://www.skalnik.pl/blog/skale-wspinaczkowe/",
+	urldate = {2020-06-21}
+}
+@online{uiaa-skala,
+	title = "Rock Climbing: UIAA grades",
+	url = "https://www.theuiaa.org/mountaineering/uiaa-grades-for-rock-climbing/",
+	urldate = {2020-06-21}
+}
