--- a/sportowa_mlynarczykm.tex
+++ b/sportowa_mlynarczykm.tex
@@ -54,7 +54,7 @@
 Istnieje spora ilość skal wyceny tras we wspinaczce. Owa dywersyfikacja częściowo wydaje się być spowodowana istnieniem wielu odmian wspinaczki, ale również krajami w jakich owe skale są stosowane. Kraj ma bowiem wpływ na rodzaj skał i na lokalne warunki wspinaczkowe - czynniki, które są częściowo odpowiedzialne za trudność jednoznacznego porównania różnych skal wspinaczkowych, o którym trochę więcej w sekcji \ref{porownanie}. Stąd też, skale wspinaczkowe mają z reguły charakter lokalny, a ich zadaniem wydaje się być umożliwienie wspinaczom danego rejonu na dobór tras na podstawie swoich poprzednich przejść. Warto tutaj nadmienić, że próby standaryzacji i globalizacji skal wspinaczkowych jak najbardziej istnieją. Opiszę w tej pracy dwie najpopularniejsze skale wyceny wspinaczkowych tras sportowych w Polsce - skalę Kurtyki spotykaną m.in. w skałach Jury Krakowsko-Częstochowskiej, oraz skalę saksońską, którą możemy spotkać w Górach Stołowych.
 
 \subsection{Skala Kurtyki}
-Wojtek Kurtyka (rysunek \ref{kurtyka}) jest jednym z najwybitniejszych wspinaczy polskich w historii. Jednym z jego dokonań było zaproponowanie w 1981 roku skali, która później przyjęła się przybierając za nazwę Jego nazwisko. Aby wytłumaczyć jej obecną postać, należy cofnąć się do czasów jej powstania i po krótce przedstawić skalę \textit{UIAA}. Skala Kurtyki miała być eleganckim rozszerzeniem skali \textit{UIAA}. Jest to skala otwarta, tzn. bez górnego ograniczenia wyceny trudności i do wyceny VI+ jest tożsama ze skalą proponowaną przez \textit{UIAA}. Kolejne poziomy trudności tworzone są poprzez dodanie kropki i cyfry arabskiej, następujących po rzymskim \textit{VI}. W skali dopuszcza się istnienie plusów (minusów brak), oraz stopni łamanych, np. VI.3+/VI.4 \cite{drytooling-skale}. Obecnie, najwyższą wyceną w skali Kurtyki jest VI.8. Pierwszą trasą o tej wycenie było \textit{Pandemonum} na Gołębniku - trasę tę poprowadził Rafał Moucki w 2001 roku \cite{VI8}.
+Wojtek Kurtyka (rysunek \ref{kurtyka}) jest jednym z najwybitniejszych wspinaczy polskich w historii. Jednym z jego licznych dokonań było zaproponowanie w 1981 roku skali, która później przyjęła się przybierając za nazwę Jego nazwisko. Czasem nazywana jest również skalą krakowską \cite{wiki-skale}. Aby wytłumaczyć jej obecną postać, należy cofnąć się do czasów jej powstania i po krótce przedstawić skalę \textit{UIAA}. Jej nazwa jest skrótem nazwy organizacji \textit{Union Internationale des Associations d'Alpinisme}. Owa organizacja chciała wypromować ową skalę w latach 70-tych XX wieku jako uniwersalną skalę wspinaczkową dla wszystkich regionów. Jak okazało się z perspektywy lat, nie udało się to zbytnio, skala ta przyjęła się jednak przy wycenianiu dróg górskich i tam też jest najbardziej popularna. Początkowo, skala ta składała się z rzymskich cyfr od I do VI i zawierała plusy oraz minusy, aby zapewnić większą swobodę. Ponadto, jest to skala otwarta, tzn. bez górnego ograniczenia wyceny trudności. Innymi słowy, w miarę pojawiania się coraz trudniejszych tras, skala rozszerza się o kolejne stopnie razem z nimi \cite{uiaa-skala}\cite{skalnik-skale}. Skala Kurtyki miała być eleganckim rozszerzeniem skali \textit{UIAA}. Również jest to skala otwarta i do wyceny VI+ jest tożsama ze skalą proponowaną przez \textit{UIAA}. Kolejne poziomy trudności tworzone są poprzez dodanie kropki i cyfry arabskiej, następujących po rzymskim \textit{VI}. W skali dopuszcza się istnienie plusów (minusów brak), oraz stopni łamanych, np. VI.3+/VI.4 \cite{drytooling-skale}. Obecnie, najwyższą wyceną w skali Kurtyki jest VI.8. Pierwszą trasą o tej wycenie było \textit{Pandemonum} na Gołębniku - trasę tę poprowadził Rafał Moucki w 2001 roku \cite{VI8}.
 
 \begin{figure}[!htbp]
 	\begin{center}
@@ -66,8 +66,18 @@ Wojtek Kurtyka (rysunek \ref{kurtyka}) jest jednym z najwybitniejszych wspinaczy
 
 \subsection{Skala saksońska}
 
+
 \subsection{Próba porównania skal}
 \label{porownanie}
+
+
+\begin{figure}[!htbp]
+	\begin{center}
+		\includegraphics[width=\linewidth]{images/comparison.eps}
+	\end{center}
+	\caption{Porównanie wybranych skal wspinaczkowych (tabelka z portalu Skalnik)\cite{skalnik-skale}}
+	\label{comparison}
+\end{figure}
 
 \section{Popularne rejony skałkowe w Polsce}
 \lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Sokoliki i Góry Stołowe.
