saksońska grading system section done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -70,3 +70,9 @@
 	url = "https://www.theuiaa.org/mountaineering/uiaa-grades-for-rock-climbing/",
 	urldate = {2020-06-21}
 }
+@online{climb-skale,
+	author = "Joanna Duplaga",
+	title = "Skale wspinaczkowe",
+	url = "https://climb.pl/skale-wspinaczkowe/",
+	urldate = {2020-06-21}
+}
