grading systems section done fully

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,3 +76,15 @@
 	url = "https://climb.pl/skale-wspinaczkowe/",
 	urldate = {2020-06-21}
 }
+@online{8a-skale,
+	author = "Piotr Czmoch",
+	title = "Trudności wspinaczkowe",
+	url = "https://8a.pl/8academy/trudnosci-wspinaczkowe/",
+	urldate = {2020-06-21}
+}
+@online{weld-skale,
+	author = "Maciek Smolnik",
+	title = "Porównanie skal wspinaczkowych",
+	url = "https://www.weld.pl/blog/porownanie-skal-wspinaczkowych/",
+	urldate = {2020-06-21}
+}
