--- a/sportowa_mlynarczykm.tex
+++ b/sportowa_mlynarczykm.tex
@@ -51,7 +51,7 @@
 \section{Stosowane skale wyceny trudności tras sportowych w Polsce}
 \lettrine[lines=2]{W}{} kulturze wspinaczkowej problem wyceny tras wydaje się być sprawą dość kontrowersyjną. W końcu, jak miał rzekomo powiedzieć Alex Lowe: \say{Najlepszym wspinaczem jest ten, kto czerpie z tego najwięcej radości} \cite{alex-lowe}. Niemniej jednak, jak w każdym sporcie i w ludzkiej naturze ogólnie, potrzeba wymierności rezultatów, czy też kategoryzacji i porównania z innymi, lub też samym sobą na przestrzeni czasu, wydaje się wygrywać. Poza tym, dopóki \say{cyfra} nie przysłania nam owej radości płynącej ze wspinania, może ona okazać się bardzo pomocna w wyborze potencjalnych projektów, czy też rywalizacji sportowej. 
 
-Istnieje spora ilość skal wyceny tras we wspinaczce. Owa dywersyfikacja częściowo wydaje się być spowodowana istnieniem wielu odmian wspinaczki, ale również krajami w jakich owe skale są stosowane. Kraj ma bowiem wpływ na rodzaj skał i na lokalne warunki wspinaczkowe - czynniki, które są częściowo odpowiedzialne za trudność jednoznacznego porównania różnych skal wspinaczkowych, o którym trochę więcej w sekcji \ref{porownanie}. Stąd też, skale wspinaczkowe mają z reguły charakter lokalny, a ich zadaniem wydaje się być umożliwienie wspinaczom danego rejonu na dobór tras na podstawie swoich poprzednich przejść. Warto tutaj nadmienić, że próby standaryzacji i globalizacji skal wspinaczkowych jak najbardziej istnieją. Opiszę w tej pracy dwie najpopularniejsze skale wyceny wspinaczkowych tras sportowych w Polsce - skalę Kurtyki spotykaną m.in. w skałach Jury Krakowsko-Częstochowskiej, oraz skalę saksońską, którą możemy spotkać w Górach Stołowych.
+Istnieje spora ilość skal wyceny tras we wspinaczce. Owa dywersyfikacja częściowo wydaje się być spowodowana istnieniem wielu odmian wspinaczki, ale również krajami w jakich owe skale są stosowane. Kraj ma bowiem wpływ na rodzaj skał i na lokalne warunki wspinaczkowe - czynniki, które są częściowo odpowiedzialne za trudność jednoznacznego porównania różnych skal wspinaczkowych, o którym trochę więcej w sekcji \ref{porownanie}. Stąd też, skale wspinaczkowe mają z reguły charakter lokalny, a ich zadaniem wydaje się być umożliwienie wspinaczom danego rejonu doboru tras na podstawie swoich poprzednich przejść. Warto tutaj nadmienić, że próby standaryzacji i globalizacji skal wspinaczkowych jak najbardziej istnieją. Opiszę w tej pracy dwie najpopularniejsze skale wyceny wspinaczkowych tras sportowych w Polsce - skalę Kurtyki spotykaną m.in. w skałach Jury Krakowsko-Częstochowskiej, oraz skalę saksońską, którą możemy spotkać w Górach Stołowych. Ponadto, wspomnę o skali francuskiej i skali \textit{UIAA}.
 
 \subsection{Skala Kurtyki}
 \label{skala-kurtyki}
@@ -70,7 +70,7 @@ Skala saksońska, inaczej zwana frankońską \cite{skalnik-skale} lub saską \ci
 
 \subsection{Próba porównania skal}
 \label{porownanie}
-
+Na rysunku \ref{comparison} można znaleźć propozycję porównania wybranych skal wspinaczkowych, która znalazła się na blogu sklepu Skalnik \cite{skalnik-skale}. Trzy z pięciu obecnych tam skal zostało w tej pracy wspomnianych, mianowicie skala \textit{UIAA}, Kurtyki i saksońska. Szczególnie warto krótko tutaj wspomnieć o skali francuskiej, która nie została opisana wcześniej, jako że raczej nie występuje w polskich skałkach. Dominuje ona jednak w większości skalnych rejonów Europy \cite{8a-skale}. Zdaniem Piotra Czmocha \cite{8a-skale} i Maćka Smolnika \cite{weld-skale} niewykluczone, że niedługo i w Polsce skala francuska zacznie się zadomawiać. Ma to być spowodowane potrzebą łatwiejszego porównywania wspinaczkowych umiejętności, potrzebą która nabiera coraz większego znaczenia w miarę wzrostu ilości wyjazdów polskich wspinaczy do rejonów skalnych w innych krajach Europy. Dodatkowo, może się do tego przyczyniać aktywniejszy udział polskiej sceny wspinaczkowej w międzynarodowej społeczności. Postać skali francuskiej możemy wyczytać z rysunku \ref{comparison}. Skala składa się z arabskiej cyfry, a od stopnia 5 wprowadza się podstopnie reprezentowane poprzez literki a, b lub c. Ponadto, możemy tutaj spotkać plusy, które pozwalają na wskazanie dodatkowej trudności według danego stopnia, a skala jest oczywiście skalą otwartą.
 
 \begin{figure}[!htbp]
 	\begin{center}
@@ -79,6 +79,8 @@ Skala saksońska, inaczej zwana frankońską \cite{skalnik-skale} lub saską \ci
 	\caption{Porównanie wybranych skal wspinaczkowych (tabelka z portalu Skalnik)\cite{skalnik-skale}}
 	\label{comparison}
 \end{figure}
+
+W swoim artykule \cite{weld-skale}, Maciek Smolnik stwierdza, że porównywanie skal ma jedynie charakter orientacyjny. Tak komentuje swoje stanowsiko: \say{Dlaczego? Dlatego że, każda wycena jest subiektywna i zależna od ogromnej liczby czynników. Ponadto, każda ze wspomnianych skal posiada różną ilość stopni trudności, co nie pozwala bezpośrednio poruszać się między każdą z nich. W wypadku wspomnianej tabeli największe zaufanie możemy mieć przy przeliczaniu trudności o wycenie 6b, 6c, 7a, 7c, reszta jest mniej lub bardziej orientacyjna. Za każdym razem pamiętajmy jednak o subiektywności wycen. Przeliczanie trudności wspinaczkowych jest czysto teoretyczne i nigdy nie będzie zero-jedynkowe. Po prostu gdy zrobimy VI.4+ to zrobiliśmy VI.4+, a gdy IX to po prostu  IX.  I chyba co najważniejsze: \say{Wspinajmy się dla przyjemności, a nie cyfry.}}. Obserwację, że porównywanie skal staje się coraz trudniejsze i potencjalnie błędne wraz ze wzrostem trudności, szczególnie na bardzo wysokim poziomie, zdaje się również podzielać Piotr Czmoch \cite{8a-skale}.
 
 \section{Popularne rejony skałkowe w Polsce}
 \lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Sokoliki i Góry Stołowe.
@@ -130,7 +132,6 @@ Rezerwat Góra Zborów znajduje się w pobliżu miejscowości Podlesice. Znajdzi
 
 \subsection{Góry Stołowe}
 
-\pagebreak
 \nocite{*}
 \addcontentsline{toc}{section}{Bibliografia}
 \printbibliography
