Góry Sokole section done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -88,3 +88,26 @@
 	url = "https://www.weld.pl/blog/porownanie-skal-wspinaczkowych/",
 	urldate = {2020-06-21}
 }
+@online{eng-pol-wspin,
+	author = "Agata Dudek-Woyke",
+	title = "A Foreigner's Guide to Rock Climbing in Poland",
+	url = "https://culture.pl/en/article/a-foreigners-guide-to-rock-climbing-in-poland",
+	urldate = {2020-06-21}
+}
+@online{podroze-se-wspin,
+	author = "Katarzyna Najman",
+	title = "Gdzie wspinać się w Polsce? 4 miejsca, które zawsze są na topie",
+	url = "https://podroze.se.pl/aktywnie/sporty-ekstremalne/jura-krakowsko-czestochowska-mekka-wspinaczy-w-polsce-gdzie-jeszcze-lubimy-sie-wspinac/5526/",
+	urldate = {2020-06-21}
+}
+@online{eng-pol-wspin,
+	author = "Agata Dudek-Woyke",
+	title = "A Foreigner's Guide to Rock Climbing in Poland",
+	url = "https://culture.pl/en/article/a-foreigners-guide-to-rock-climbing-in-poland",
+	urldate = {2020-06-21}
+}
+@online{topo-sokoliki,
+	title = "Portal Górski, Topo: Sokoliki",
+	url = "http://topo.portalgorski.pl/Sokoliki,Sudety,region,772",
+	urldate = {2020-06-21}
+}
