--- a/sportowa_mlynarczykm.tex
+++ b/sportowa_mlynarczykm.tex
@@ -83,7 +83,7 @@ Na rysunku \ref{comparison} można znaleźć propozycję porównania wybranych s
 W swoim artykule \cite{weld-skale}, Maciek Smolnik stwierdza, że porównywanie skal ma jedynie charakter orientacyjny. Tak komentuje swoje stanowsiko: \say{Dlaczego? Dlatego że, każda wycena jest subiektywna i zależna od ogromnej liczby czynników. Ponadto, każda ze wspomnianych skal posiada różną ilość stopni trudności, co nie pozwala bezpośrednio poruszać się między każdą z nich. W wypadku wspomnianej tabeli największe zaufanie możemy mieć przy przeliczaniu trudności o wycenie 6b, 6c, 7a, 7c, reszta jest mniej lub bardziej orientacyjna. Za każdym razem pamiętajmy jednak o subiektywności wycen. Przeliczanie trudności wspinaczkowych jest czysto teoretyczne i nigdy nie będzie zero-jedynkowe. Po prostu gdy zrobimy VI.4+ to zrobiliśmy VI.4+, a gdy IX to po prostu  IX.  I chyba co najważniejsze: \say{Wspinajmy się dla przyjemności, a nie cyfry.}}. Obserwację, że porównywanie skal staje się coraz trudniejsze i potencjalnie błędne wraz ze wzrostem trudności, szczególnie na bardzo wysokim poziomie, zdaje się również podzielać Piotr Czmoch \cite{8a-skale}.
 
 \section{Popularne rejony skałkowe w Polsce}
-\lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Sokoliki i Góry Stołowe.
+\lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Góry Sokole i Stołowe.
 
 \subsection{Jura Krakowsko-Częstochowska}
 Bez wątpienia jest to najczęściej odwiedzany rejon skałkowy w Polsce. Jednym z powodów owej popularności może być liczność dostępnych skał - jest to bowiem największe skupisko skał wapiennych w naszym kraju. Jura jest wyżyną rozciągającą się pomiędzy Krakowem, a Częstochową. Ze względu na swoją wielkość rejon ten jest z reguły dzielony na część północną, środkową i południową. Na Jurze trasy wyceniane według skali Kurtyki, o której wcześniej już tutaj pisano. Według statystyk na stronie Portalu Górskiego \cite{topo-jura}, na Jurze wytyczono prawie 8900 tras. Największy wybór tras znajdziemy tutaj o wycenie VI.1+ - aż 772 trasy \cite{topo-jura}, ale również bardziej początkujący lub zaawansowani znajdą tutaj coś dla siebie.
@@ -128,7 +128,16 @@ Rezerwat Góra Zborów znajduje się w pobliżu miejscowości Podlesice. Znajdzi
 	\label{}
 \end{figure}
 
-\subsection{Sokoliki}
+\subsection{Góry Sokole}
+Mimo, że Góry Sokole należą do Rudaw Janowickich, które można uważać za region wspinaczkowy sam w sobie, często rozpatrywane są oddzielnie. To co wyróżnia owe góry na tle innych rejonów polskich rejonów wspinaczkowych, to możliwość uprawiania tutaj wspinaczki sportowej na granicie, który to rodzaj skały zapewnia stopom lepsze tarcie niż skały wapienne obecne na Jurze \cite{podroze-se-wspin}. Na Sokoliki składają się trzy obszary: Krzyżna Góra, rejon Sokolika i rejon Sukiennic \cite{eng-pol-wspin}. Mimo, że wybór tras dla początkujących będzie tu mniejszy niż na Jurze, to nadal mają oni tutaj do dyspozycji co najmniej 400 tras o wycenie do VI+ włącznie \cite{topo-sokoliki}.
+
+\begin{figure}[!htbp]
+	\begin{center}
+		\includegraphics[width=0.9\linewidth]{images/sokolik-duzy.eps}
+	\end{center}
+	\caption{Góry Sokole, Rudawski Park Krajobrazowy, Sokolik Duży (fot. Renata i Marek Kosińscy, Forum)\cite{eng-pol-wspin}.}
+	\label{}
+\end{figure}
 
 \subsection{Góry Stołowe}
 
