--- a/sportowa_mlynarczykm.tex
+++ b/sportowa_mlynarczykm.tex
@@ -46,7 +46,8 @@
 \end{figure}
 
 \section{Wstęp}
-%\lettrine[lines=2]{}{}
+\lettrine[lines=2]{W}{} pracy postaram się przybliżyć jakie skale służące do wyceny trudności tras sportowych stosowane są w Polsce. Ponadto, po krótce omówię problem porównywania skal wspinaczkowych pomiędzy różnymi regionami. Następnie, przedstawię trzy polskie rejony skałkowe, w których można uprawiać wspinaczkę sportową. Przegląd rejonów postaram się zrobić oczami zupełnego amatora w temacie wspinaczki skałkowej. Oznacza, że skupię się na dostępności tras i propozycjach skierowanych do początkujących.
+
 
 \section{Stosowane skale wyceny trudności tras sportowych w Polsce}
 \lettrine[lines=2]{W}{} kulturze wspinaczkowej problem wyceny tras wydaje się być sprawą dość kontrowersyjną. W końcu, jak miał rzekomo powiedzieć Alex Lowe: \say{Najlepszym wspinaczem jest ten, kto czerpie z tego najwięcej radości} \cite{alex-lowe}. Niemniej jednak, jak w każdym sporcie i w ludzkiej naturze ogólnie, potrzeba wymierności rezultatów, czy też kategoryzacji i porównania z innymi, lub też samym sobą na przestrzeni czasu, wydaje się wygrywać. Poza tym, dopóki \say{cyfra} nie przysłania nam owej radości płynącej ze wspinania, może ona okazać się bardzo pomocna w wyborze potencjalnych projektów, czy też rywalizacji sportowej. 
@@ -59,7 +60,7 @@ Wojtek Kurtyka (rysunek \ref{kurtyka}) jest jednym z najwybitniejszych wspinaczy
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/kurtyka.eps}
+		\includegraphics[width=0.75\linewidth]{images/kurtyka.eps}
 	\end{center}
 	\caption{Wojciech Kurtyka w Tatrach Zachodnich, droga Łamaniec na Raptawickiej Turni, lata 90. XX w. (fot. ze zbiorów Wojciecha Kurtyki) \cite{tyg-powszechni-kurtyka}}
 	\label{kurtyka}
@@ -70,7 +71,7 @@ Skala saksońska, inaczej zwana frankońską \cite{skalnik-skale} lub saską \ci
 
 \subsection{Próba porównania skal}
 \label{porownanie}
-Na rysunku \ref{comparison} można znaleźć propozycję porównania wybranych skal wspinaczkowych, która znalazła się na blogu sklepu Skalnik \cite{skalnik-skale}. Trzy z pięciu obecnych tam skal zostało w tej pracy wspomnianych, mianowicie skala \textit{UIAA}, Kurtyki i saksońska. Szczególnie warto krótko tutaj wspomnieć o skali francuskiej, która nie została opisana wcześniej, jako że raczej nie występuje w polskich skałkach. Dominuje ona jednak w większości skalnych rejonów Europy \cite{8a-skale}. Zdaniem Piotra Czmocha \cite{8a-skale} i Maćka Smolnika \cite{weld-skale} niewykluczone, że niedługo i w Polsce skala francuska zacznie się zadomawiać. Ma to być spowodowane potrzebą łatwiejszego porównywania wspinaczkowych umiejętności, potrzebą która nabiera coraz większego znaczenia w miarę wzrostu ilości wyjazdów polskich wspinaczy do rejonów skalnych w innych krajach Europy. Dodatkowo, może się do tego przyczyniać aktywniejszy udział polskiej sceny wspinaczkowej w międzynarodowej społeczności. Postać skali francuskiej możemy wyczytać z rysunku \ref{comparison}. Skala składa się z arabskiej cyfry, a od stopnia 5 wprowadza się podstopnie reprezentowane poprzez literki a, b lub c. Ponadto, możemy tutaj spotkać plusy, które pozwalają na wskazanie dodatkowej trudności według danego stopnia, a skala jest oczywiście skalą otwartą.
+Na rysunku \ref{comparison} można znaleźć propozycję porównania wybranych skal wspinaczkowych, która znalazła się na blogu sklepu Skalnik \cite{skalnik-skale}. Trzy z pięciu obecnych tam skal zostały w tej pracy wspomniane, mianowicie skala \textit{UIAA}, Kurtyki i saksońska. Szczególnie warto krótko tutaj wspomnieć o skali francuskiej, która nie została opisana wcześniej, jako że raczej nie występuje w polskich skałkach. Dominuje ona jednak w większości skalnych rejonów Europy \cite{8a-skale}. Zdaniem Piotra Czmocha \cite{8a-skale} i Maćka Smolnika \cite{weld-skale} niewykluczone, że niedługo i w Polsce skala francuska zacznie się zadomawiać. Ma to być spowodowane potrzebą łatwiejszego porównywania wspinaczkowych umiejętności, potrzebą która nabiera coraz większego znaczenia w miarę wzrostu ilości wyjazdów polskich wspinaczy do rejonów skalnych w innych krajach Europy. Dodatkowo, może się do tego przyczyniać aktywniejszy udział polskiej sceny wspinaczkowej w międzynarodowej społeczności. Postać skali francuskiej możemy wyczytać z rysunku \ref{comparison}. Skala składa się z arabskiej cyfry, a od stopnia 5 wprowadza się podstopnie reprezentowane poprzez literki a, b lub c. Ponadto, możemy tutaj spotkać plusy, które pozwalają na wskazanie dodatkowej trudności według danego stopnia, a skala jest oczywiście skalą otwartą.
 
 \begin{figure}[!htbp]
 	\begin{center}
@@ -83,14 +84,14 @@ Na rysunku \ref{comparison} można znaleźć propozycję porównania wybranych s
 W swoim artykule \cite{weld-skale}, Maciek Smolnik stwierdza, że porównywanie skal ma jedynie charakter orientacyjny. Tak komentuje swoje stanowsiko: \say{Dlaczego? Dlatego że, każda wycena jest subiektywna i zależna od ogromnej liczby czynników. Ponadto, każda ze wspomnianych skal posiada różną ilość stopni trudności, co nie pozwala bezpośrednio poruszać się między każdą z nich. W wypadku wspomnianej tabeli największe zaufanie możemy mieć przy przeliczaniu trudności o wycenie 6b, 6c, 7a, 7c, reszta jest mniej lub bardziej orientacyjna. Za każdym razem pamiętajmy jednak o subiektywności wycen. Przeliczanie trudności wspinaczkowych jest czysto teoretyczne i nigdy nie będzie zero-jedynkowe. Po prostu gdy zrobimy VI.4+ to zrobiliśmy VI.4+, a gdy IX to po prostu  IX.  I chyba co najważniejsze: \say{Wspinajmy się dla przyjemności, a nie cyfry.}}. Obserwację, że porównywanie skal staje się coraz trudniejsze i potencjalnie błędne wraz ze wzrostem trudności, szczególnie na bardzo wysokim poziomie, zdaje się również podzielać Piotr Czmoch \cite{8a-skale}.
 
 \section{Popularne rejony skałkowe w Polsce}
-\lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Góry Sokole i Stołowe.
+\lettrine[lines=2]{W}{} tej części pracy przedstawię kilka rejonów skałkowych w Polsce - począwszy od najpopularniejszej Jury, po mniej znane - Góry Sokole i krakowski Zakrzówek.
 
 \subsection{Jura Krakowsko-Częstochowska}
 Bez wątpienia jest to najczęściej odwiedzany rejon skałkowy w Polsce. Jednym z powodów owej popularności może być liczność dostępnych skał - jest to bowiem największe skupisko skał wapiennych w naszym kraju. Jura jest wyżyną rozciągającą się pomiędzy Krakowem, a Częstochową. Ze względu na swoją wielkość rejon ten jest z reguły dzielony na część północną, środkową i południową. Na Jurze trasy wyceniane według skali Kurtyki, o której wcześniej już tutaj pisano. Według statystyk na stronie Portalu Górskiego \cite{topo-jura}, na Jurze wytyczono prawie 8900 tras. Największy wybór tras znajdziemy tutaj o wycenie VI.1+ - aż 772 trasy \cite{topo-jura}, ale również bardziej początkujący lub zaawansowani znajdą tutaj coś dla siebie.
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/jura-okiennik.eps}
+		\includegraphics[width=0.75\linewidth]{images/jura-okiennik.eps}
 	\end{center}
 	\caption{Takie piękne skałki możemy spotkać na Jurze. Główna ściana Okiennika Wielkiego widziana od wschodu (fot. Paweł Wrona)\cite{jura-okiennik}.}
 	\label{}
@@ -99,11 +100,11 @@ Bez wątpienia jest to najczęściej odwiedzany rejon skałkowy w Polsce. Jednym
 Jako, że jestem zupełnym amatorem jeśli chodzi o wspinaczkę skałkową, poniżej postaram się przedstawić dwa przykładowe rejony Jury odpowiednie do rozpoczęcia przygody ze wspinaniem \cite{jura-okiennik}. 
 
 \subsubsection{Rzędkowice}
-Rzekomo wielu wspinaczu tutaj zaczyna swoją przygodę z Jurą. Jednym z powodów, może być fakt, że początkujący wspinacz znajdzie tutaj ponad 200 linii o wycenie do VI+ włącznie \cite{jura-rzedkowice}. Zdaniem Pawła Wrony z 8academy na początek wspinania w tym rejonie, godnymi uwagi może być skała \textit{Zegarowa} (rysunek \ref{zegarowa}) wraz z trasami \textit{Połupany filarek III} czy \textit{Ostatnią IV+} \cite{jura-rzedkowice}.
+Rzekomo wielu wspinaczu tutaj zaczyna swoją przygodę z Jurą. Jednym z powodów, może być fakt, że początkujący wspinacz znajdzie tutaj ponad 200 linii o wycenie do VI+ włącznie \cite{jura-rzedkowice}. Zdaniem Pawła Wrony z 8academy na początek wspinania w tym rejonie, godną uwagi może być skała \textit{Zegarowa} (rysunek \ref{zegarowa}) wraz z poprowadzonymi na niej trasami - \textit{Połupany filarek III} czy \textit{Ostatnią IV+} \cite{jura-rzedkowice}.
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/jura-zegarowa.eps}
+		\includegraphics[width=0.75\linewidth]{images/jura-zegarowa.eps}
 	\end{center}
 	\caption{Wspinanie na Zegarowej, Rzędkowice (fot. Paweł Wrona)\cite{jura-rzedkowice}.}
 	\label{zegarowa}
@@ -114,7 +115,7 @@ Rezerwat Góra Zborów znajduje się w pobliżu miejscowości Podlesice. Znajdzi
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/jura-gora-zborow.eps}
+		\includegraphics[width=0.75\linewidth]{images/jura-gora-zborow.eps}
 	\end{center}
 	\caption{Długa grań z widoczną po lewej ścianą \textit{Dziurek} (fot. Paweł Wrona)\cite{jura-gora-zborow}.}
 	\label{zborow}
@@ -122,7 +123,7 @@ Rezerwat Góra Zborów znajduje się w pobliżu miejscowości Podlesice. Znajdzi
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/jura-gora-zborow-2.eps}
+		\includegraphics[width=0.75\linewidth]{images/jura-gora-zborow-2.eps}
 	\end{center}
 	\caption{Okolice Kruka, Góra Zborów (fot. Paweł Wrona)\cite{jura-gora-zborow}.}
 	\label{}
@@ -133,14 +134,24 @@ Mimo, że Góry Sokole należą do Rudaw Janowickich, które można uważać za 
 
 \begin{figure}[!htbp]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/sokolik-duzy.eps}
+		\includegraphics[width=0.75\linewidth]{images/sokolik-duzy.eps}
 	\end{center}
 	\caption{Góry Sokole, Rudawski Park Krajobrazowy, Sokolik Duży (fot. Renata i Marek Kosińscy, Forum)\cite{eng-pol-wspin}.}
 	\label{}
 \end{figure}
 
-\subsection{Góry Stołowe}
+\subsection{Zakrzówek}
+Krakowianie, jako jedyni wśród mieszkańców większych polskich miast mają możliwość uprawiania wspinaczki sportowej na prawdziwych skałach nieopuszczając swojego miasta. Ściany Zakrzówka, który kiedyś był wapiennym kamieniołomem, a od 1990 roku służy jako sztuczny zbiornik wody, miały być obiektem wspinaczki już od początków XX wieku \cite{topo-zakrzowek}. Tutaj też miała paść pierwsza trasa o stopniu VI.5 \cite{topo-zakrzowek}. Ze względu na swoją popularność w krakowskim środowisku wspinaczkowym, wytyczone trasy są już podobno mocno wyślizgane \cite{podroze-se-wspin}. Niemniej jednak, bardzo bliska odległość od centrum Krakowa sprawia, że trudno odmówić spróbowania tamtejszej wspinaczki. Dla początkujących \say{śmiałków} czeka ponad 20 tras o wycenie do VI+ włącznie. 
 
+\begin{figure}[!htbp]
+	\begin{center}
+		\includegraphics[width=0.75\linewidth]{images/zakrzowek.eps}
+	\end{center}
+	\caption{Zakrzówek, Kraków (fot. M. Lasyk)\cite{eng-pol-wspin}.}
+	\label{zakrzowek}
+\end{figure}
+
+\pagebreak
 \nocite{*}
 \addcontentsline{toc}{section}{Bibliografia}
 \printbibliography
